Add greied out style for inactive cells

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -1221,6 +1221,7 @@
                                             <outlet property="cellContentView" destination="URD-dB-Nrt" id="1EK-P6-km5"/>
                                             <outlet property="cellLeadingConstraint" destination="t0y-Mx-Fwm" id="N3N-cg-V9U"/>
                                             <outlet property="countryLabel" destination="dyg-Cj-1e4" id="Law-OZ-mou"/>
+                                            <outlet property="deleteView" destination="2Dg-uG-nM8" id="Peq-JO-G0D"/>
                                             <outlet property="durationLabel" destination="wwC-8Z-ndd" id="zdK-uB-vEu"/>
                                             <outlet property="favImageView" destination="qjG-Mu-BmG" id="kJ4-6s-Bgw"/>
                                             <outlet property="flagImageView" destination="Dqc-uc-rwR" id="S1m-XA-nNn"/>
