finishing paginaaaaation :) Complete all cases when reload data is needed

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -353,7 +353,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="43"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <connections>
-                                                    <segue destination="beU-4n-wfr" kind="show" id="mcy-01-359"/>
+                                                    <action selector="cartButtonAction:" destination="6jc-WL-DqT" eventType="touchUpInside" id="5ck-yu-zZO"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -861,6 +861,7 @@
                         <segue destination="adJ-7o-RXS" kind="presentation" identifier="CountrySearchSegueID" id="2RJ-YM-lk1"/>
                         <segue destination="re9-YY-vLi" kind="presentation" identifier="MarketTutorialSegueID" id="EHc-PY-kev"/>
                         <segue destination="ycU-Dh-oI3" kind="show" identifier="MarketItemSegueID" id="8gw-Ts-PfU"/>
+                        <segue destination="beU-4n-wfr" kind="show" identifier="MarketCartSegueID" id="orc-1B-bqp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YAj-hP-pBT" userLabel="First Responder" sceneMemberID="firstResponder"/>
